# Grapsy

./: .gitignore  Cargo.toml  GUIDE.md  README.md  commands.json  grapsy.sh  main.py  package-lock.json  package.json  requirements.txt
src/: about.html  cian.conf  config.html  create_key.html  download.html  en.json  es.json  index.html  info.html  main.js  main.rs  styles.css  upload.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cian.rs  main.rs
